# Analyzer-Comparison-Project-Course-work-2020-2021.

./: CMakeLists.txt  Common.py  ProjectConfig.py  ProjectConfigBufferOverflow.py  README.txt  allLibs.py  buffer_overflow_load_test.py  buffer_overflow_test.py  debug.py  heur_test.py  main.py  new_main.py  readme.txt
development/demonstration/: files_creation.py  files_stat_matrix.py  funcs_creation.py  funcs_stat_matrix.py  info_creation.py  lines_creation.py  lines_stat_matrix.py  lines_vs_vars_full.txt  lines_vs_vars_limited.txt  reaching_defs_creation.py  reaching_defs_stat_matrix.py  reaching_defs_union_creation.py  vars_creation.py  vars_stat_matrix.py
development/developmentExchange/tickets/CWE190_Integer_Overflow__char_fscanf_add_01/: CMakeLists.txt  CWE190_Integer_Overflow__char_fscanf_add_01.c  README.txt
development/developmentExchange/tickets/CWE190_Integer_Overflow__int64_t_fscanf_add_63/: CMakeLists.txt  README.txt
development/developmentReports/: .CWE_grouping.txt.swp  CWE_grouping (copy).txt  CWE_grouping.txt  PLANS  report1.txt  report1_demo.txt  report2.txt  report2_tickets.txt
development/developmentTools/: DevelopmentTestScript.py  TicketCreateScript.py
euristics/: Lines.py  SameSyntaxConstruction.py  lines.py
olderStuff/: Body.py  Fridge.py  Infoold.py  SvaceAnalyze.py  mainold.py
projectLib/: AnalyzerInfo.py  Binding.py  Common.py  Comparison.py  ErrorInfo.py  FileInfo.py  Heuristic.py  Info.py  ProjectConfig.py  common.py  loadSavePrint.py  pipeline.py  projectConfig.py
projectLib/Classes/: AnalyzerInfo.py  Binding.py  Comparison.py  ErrorInfo.py  FileInfo.py  Heuristic.py
projectTests/: ProjectConfig_test.py
projectTests/AnalyzerInfo/: data_structure_operations_test.py  mine_info_juliet_test.py  mine_info_svace_test.py  print_info_test.py  save_load_test.py
projectTests/AnalyzerOutputs/: juliet_output_files.svres  juliet_output_lines.svres  juliet_output_mine.svres  svace_output_files.svres  svace_output_lines.svres  svace_output_mine.svres
projectTests/Functions/: svres_gen_test.py
projectTests/Heuristic/: files_test.py  funcs_test.py  lines_test.py
reports/: config_home.txt  config_work.txt  mode1.txt  report.txt  report1_error_list_by_type.txt  report1_tickets.txt
tests/: buffer_overflow_test1.py  buffer_overflow_test2.py  heur_test.py  main_test.py
(+16 files in other folders)
